testdata/baselines/reference/submodule/compiler/interfaceMergedUnconstrainedNoErrorIrrespectiveOfOrder.errors.txt
regression.ts(3,44): error TS2344: Type 'T' does not satisfy the constraint '(...args: any) => any'.


==== working.ts (0 errors) ====
    // minmal samples from #33395
    export namespace ns {
        interface Function<T extends (...args: any) => any> {
            throttle(): Function<T>;
        }
        interface Function<T> {
            unary(): Function<() => ReturnType<T>>;
        }
    }
==== regression.ts (1 errors) ====
    export namespace ns {
        interface Function<T> {
            unary(): Function<() => ReturnType<T>>;
                                               ~
!!! error TS2344: Type 'T' does not satisfy the constraint '(...args: any) => any'.
!!! related TS2208 regression.ts:2:24: This type parameter might need an `extends (...args: any) => any` constraint.
        }
        interface Function<T extends (...args: any) => any> {
            throttle(): Function<T>;
        }
    }